timesheet add phase and task

--- a/src/app/features/timesheet/components/export-my-timesheet/export-my-timesheet.component.html
+++ b/src/app/features/timesheet/components/export-my-timesheet/export-my-timesheet.component.html
@@ -20,7 +20,7 @@
                     <th class="border p-2">Project Deliverable</th>
                     <th class="border p-2">Project Name</th>
                     <th class="border p-2">Customer Name</th>
-                    <th class="border p-2">Task Category</th>
+                    <th class="border p-2">Phase</th>
                     <th class="border p-2">Task Description</th>
                     <th class="border p-2">Hours</th>
                     <th class="border p-2">Minutes</th>
@@ -35,7 +35,7 @@
                     <td class="border p-2">{{ timesheet.project_deliverable_name }}</td>
                     <td class="border p-2">{{ timesheet.project_name }}</td>
                     <td class="border p-2">{{ timesheet.customer_name }}</td>
-                    <td class="border p-2">{{ timesheet.task_category_name }}</td>
+                    <td class="border p-2">{{ timesheet.project_phase_name }}</td>
                     <td class="border p-2">{{ timesheet.task_description }}</td>
                     <td class="border p-2">{{ timesheet.hours }}</td>
                     <td class="border p-2">{{ timesheet.minutes }}</td>
