--- a/src/app/features/app-center/app-center.component.html
+++ b/src/app/features/app-center/app-center.component.html
@@ -5,9 +5,9 @@
   <ng-container *ngIf="userRole !== '4'">
     <a
       routerLink="/organisation"
-      class="bg-white p-6 shadow-md rounded-xl flex flex-col items-center transition hover:shadow-lg hover:bg-gray-50 w-80"
-    >
-      <img src="" alt="Organisation" class="w-26 h-16 mb-4" />
+      class="bg-white p-6 shadow-md rounded-xl flex flex-col items-center transition hover:shadow-lg hover:bg-gray-50 w-full max-w-lg border border-gray-300"
+      >
+      <img src="Org.jpg" alt="Organisation" class="w-26 h-16 mb-4" />
       <h2 class="text-xl font-semibold text-gray-800">Organisation Master</h2>
     </a>
   </ng-container>
@@ -15,9 +15,9 @@
   <!-- Timesheet App -->
   <a
     routerLink="/timesheet"
-    class="bg-white p-6 shadow-md rounded-xl flex flex-col items-center transition hover:shadow-lg hover:bg-gray-50 w-80"
+    class="bg-white p-6 shadow-md rounded-xl flex flex-col items-center transition hover:shadow-lg hover:bg-gray-50 w-full max-w-lg border border-gray-300"
     >
-    <img src="" alt="Timesheet" class="w-26 h-16 mb-4" />
+    <img src="time.jpg" alt="Timesheet" class="w-26 h-16 mb-4" />
     <h2 class="text-xl font-semibold text-gray-800">Timesheet App</h2>
   </a>
 
@@ -25,9 +25,9 @@
   <ng-container *ngIf="userRole !== '4'">
     <a
       routerLink="/resource-management"
-      class="bg-white p-6 shadow-md rounded-xl flex flex-col items-center transition hover:shadow-lg hover:bg-gray-50 w-80"
-    >
-      <img src="" alt="Resource Management" class="w-26 h-16 mb-4" />
+      class="bg-white p-6 shadow-md rounded-xl flex flex-col items-center transition hover:shadow-lg hover:bg-gray-50 w-full max-w-lg border border-gray-300"
+      >
+      <img src="rmg.jpg" alt="Resource Management" class="w-26 h-20 mb-4" />
       <h2 class="text-xl font-semibold text-gray-800">Resource Management</h2>
     </a>
   </ng-container>
