--- a/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
+++ b/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
@@ -61,7 +61,7 @@
         </div>
 
         <div>
-            <label class="block mb-2 font-semibold">Tentative End Date</label>
+            <label class="block mb-2 font-semibold">Tentative End Date*</label>
             <input type="date" [(ngModel)]="tentativeEndDate" name="tentativeEndDate"
                 class="border p-2 w-full rounded-md">
         </div>
@@ -198,7 +198,7 @@
       
               <!-- Tentative End Date -->
               <div class="form-group">
-                <label class="block mb-2 font-semibold">Tentative End Date</label>
+                <label class="block mb-2 font-semibold">Tentative End Date*</label>
                 <input type="date" [(ngModel)]="editTentativeEndDate" name="editTentativeEndDate" class="border p-2 w-full rounded-md">
               </div>
       
