--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -168,10 +168,10 @@
       class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition">
       Export My Timesheet
     </a>
-    <a [routerLink]="['/timesheet', 'managers-hub']" routerLinkActive="active-link"
+    <!-- <a [routerLink]="['/timesheet', 'managers-hub']" routerLinkActive="active-link"
       class="px-3 py-1 text-gray-700 hover:bg-blue-500 hover:text-white rounded transition">
       Manager's Hub
-    </a>
+    </a> -->
   </div>
 
   <!-- Navbar Center (Resource Management Links - Conditionally Shown) -->
@@ -226,11 +226,11 @@
           <img src="change-password.png" alt="Change Password Icon" class="h-5 w-5 mr-2" />
           Change Password
         </button>
-        <button class="flex items-center w-full text-base text-gray-700 hover:bg-gray-100 transition px-4 py-3"
+        <!-- <button class="flex items-center w-full text-base text-gray-700 hover:bg-gray-100 transition px-4 py-3"
           (click)="showUpdateEmailForm = !showUpdateEmailForm">
           <img src="email.png" alt="Update Email Icon" class="h-5 w-5 mr-2" />
           Update Email
-        </button>
+        </button> -->
         <button class="flex items-center w-full text-base text-red-600 hover:bg-red-100 transition px-4 py-3"
           (click)="logout()">
           <img src="logout.png" alt="Logout Icon" class="h-5 w-5 mr-2" />
