--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="min-h-screen flex items-center justify-center bg-gray-100">
   <!-- Login Form -->
   <div class="bg-white shadow-lg rounded-2xl p-8 w-full max-w-md">
-    <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Login</h2>
+    <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Testing Login</h2>
     <form (ngSubmit)="onSubmit()" autocomplete="on" class="space-y-4">
       <input
         type="email"
