all teams timesheet

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -184,10 +184,11 @@
       class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition">
       Assign Project Team
     </a>
-    <!-- <a [routerLink]="['/resource-management', 'all-teams-timesheet']" routerLinkActive="active-link"
+    <a [routerLink]="['/resource-management', 'all-teams-timesheet']" routerLinkActive="active-link"
       class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition">
       All Teams Timesheet
     </a>
+    <!-- 
     <a [routerLink]="['/resource-management', 'all-projects-team']" routerLinkActive="active-link"
       class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition">
       All Projects Team
