--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -173,7 +173,7 @@
       Manager's Hub
     </a> -->
     <!-- Updated Managers Hub Dropdown -->
-    <div class="relative" #managersHubDropdown>
+    <div *ngIf="shouldShowManagersHub" class="relative" #managersHubDropdown>
       <a (click)="toggleManagersHubDropdown()" [routerLink]="['/timesheet', 'managers-hub']" routerLinkActive="active-link"
         class="px-3 py-1 text-gray-700 hover:bg-blue-500 hover:text-white rounded transition cursor-pointer flex items-center">
         Manager's Hub
